# voynich-engine

./: .gitignore  README.md  VOYNICH.aux  VOYNICH.out  VOYNICH_MANUSCRIPT.aux  VOYNICH_MANUSCRIPT.out  WALKTHROUGH.aux  WALKTHROUGH.out  commit.txt  gifgen.py  pyproject.toml
.archive/: v_out_damn.md
data/: f32r.txt  f94v.txt
docs/: OPERATOR_SESSION.md  OPERATOR_SESSION.tex  VOYNICH.md  VOYNICH.tex  VOYNICHCOMPUTER.md  VOYNICH_MANUSCRIPT.aux  VOYNICH_MANUSCRIPT.md  VOYNICH_MANUSCRIPT.out  VOYNICH_MANUSCRIPT.tex  WALKTHROUGH.md  WALKTHROUGH.tex  cfg_tokens_3d.html  f116r_callgraph_3d.html  grammar_verification.md  sections_mapping.md  voynich_callgraph_3d.html
examples/: quickstart.py
programs/: animated_cfg.py  animated_cfg_corpus.py  animated_cfg_tokens.py  bootstrap_explorer.py  cfg_tokens_3d.py  folio_comparator.py  mutation_scanner.py  paradox_injector.py  physics_explorer.py  plot_cfg_document.py  plot_f116r_3d.py  plot_full_graph_3d.py  register_lifecycle.py  run_all.py  session_runner.py  synthetic_comparator.py
voynich_engine/: __init__.py  callgraph.py  callgraph_tokens.py  compiler.py  primitives.py  runtime.py  sectional.py  session.py
